; ModuleID = '/home/carl/AnghaBench/git/extr_convert.c_stream_filter.c'
source_filename = "/home/carl/AnghaBench/git/extr_convert.c_stream_filter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stream_filter = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { {}* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @stream_filter(%struct.stream_filter* %0, i8* %1, i64* %2, i8* %3, i64* %4) #0 {
  %6 = alloca %struct.stream_filter*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64*, align 8
  store %struct.stream_filter* %0, %struct.stream_filter** %6, align 8
  store i8* %1, i8** %7, align 8
  store i64* %2, i64** %8, align 8
  store i8* %3, i8** %9, align 8
  store i64* %4, i64** %10, align 8
  %11 = load %struct.stream_filter*, %struct.stream_filter** %6, align 8
  %12 = getelementptr inbounds %struct.stream_filter, %struct.stream_filter* %11, i32 0, i32 0
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = bitcast {}** %14 to i32 (%struct.stream_filter*, i8*, i64*, i8*, i64*)**
  %16 = load i32 (%struct.stream_filter*, i8*, i64*, i8*, i64*)*, i32 (%struct.stream_filter*, i8*, i64*, i8*, i64*)** %15, align 8
  %17 = load %struct.stream_filter*, %struct.stream_filter** %6, align 8
  %18 = load i8*, i8** %7, align 8
  %19 = load i64*, i64** %8, align 8
  %20 = load i8*, i8** %9, align 8
  %21 = load i64*, i64** %10, align 8
  %22 = call i32 %16(%struct.stream_filter* %17, i8* %18, i64* %19, i8* %20, i64* %21)
  ret i32 %22
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
